force-app/main/default/objects/Order_Communication__c/Order_Communication__c.object-meta.xml
<CustomObject>
    <description>Records created by scheduled apex</description>
    <label>Order Communication (Old)</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Order Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Communications (Old)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>