force-app/main/default/objects/Order_Communication__c/fields/Comms_Sent__c.field-meta.xml
<CustomField>
    <fullName>Comms_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used to indicate &quot;One-Off&quot; email comms sent</inlineHelpText>
    <label>Comms Sent</label>
    <type>Checkbox</type>
</CustomField>