force-app/main/default/objects/Order_Communication__c/fields/Days_until_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Departure_Date__c</fullName>
    <formula>order__r.Days_until_Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Departure Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>