force-app/main/default/objects/Order_Communication__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <formula>order__r.Deal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal</label>
    <type>Text</type>
</CustomField>