force-app/main/default/objects/Order_Communication__c/fields/Email_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject_Line__c</fullName>
    <formula>Email_Template__r.Email_Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subject Line</label>
    <type>Text</type>
</CustomField>