force-app/main/default/objects/Order_Communication__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>Email_Template__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>