force-app/main/default/objects/Order_Communication__c/fields/escapes_with_flights_survey_sent__c.field-meta.xml
<CustomField>
    <fullName>escapes_with_flights_survey_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escapes with Flights Survey Sent</label>
    <type>Checkbox</type>
</CustomField>