force-app/main/default/objects/Order_Communication__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>