force-app/main/default/objects/Order_Communication__c/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <formula>order__r.Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>