force-app/main/default/objects/Order_Communication__c/fields/order_record_type_name__c.field-meta.xml
<CustomField>
    <fullName>order_record_type_name__c</fullName>
    <formula>order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type Name</label>
    <type>Text</type>
</CustomField>