force-app/main/default/objects/Order_Communication__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>Phone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>