force-app/main/default/objects/Order_Communication__c/fields/purchaser_last_name__c.field-meta.xml
<CustomField>
    <fullName>purchaser_last_name__c</fullName>
    <label>Purchaser Last Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>