force-app/main/default/objects/Order_Communication__c/fields/stop_comms_via_order_date_deal__c.field-meta.xml
<CustomField>
    <fullName>stop_comms_via_order_date_deal__c</fullName>
    <formula>order__r.stop_comms_via_order_date_deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stop Comms via Order/Date/Deal</label>
    <type>Checkbox</type>
</CustomField>