force-app/main/default/objects/Order_Communication__c/fields/Welcome_home_date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_home_date__c</fullName>
    <formula>IF( (return_date__c + 1) = TODAY() , &quot;yes&quot;, &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome home date</label>
    <type>Text</type>
</CustomField>