force-app/main/default/objects/Order_Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>order__c</columns>
    <columns>communication_code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>email_purchaser__c</columns>
    <columns>departure_date__c</columns>
    <columns>return_date__c</columns>
    <columns>survey_sent__c</columns>
    <columns>Welcome_home_date__c</columns>
    <columns>Welcome_home_sent__c</columns>
    <columns>Fire_Feefo_today__c</columns>
    <columns>order_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>