force-app/main/default/objects/Order_Communication__c/listViews/escapes_survey.listView-meta.xml
<ListView>
    <fullName>escapes_survey</fullName>
    <columns>NAME</columns>
    <columns>communication_code__c</columns>
    <columns>Days_until_Departure_Date__c</columns>
    <columns>Deal__c</columns>
    <columns>departure_city__c</columns>
    <columns>email_purchaser__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>communication_code__c</field>
        <operation>contains</operation>
        <value>escape</value>
    </filters>
    <label>escapes survey</label>
</ListView>