force-app/main/default/objects/Order_Communication__c/listViews/Order_Comms.listView-meta.xml
<ListView>
    <fullName>Order_Comms</fullName>
    <columns>NAME</columns>
    <columns>purchaser_first_name__c</columns>
    <columns>Welcome_home_date__c</columns>
    <columns>Welcome_home_sent__c</columns>
    <columns>communication_code__c</columns>
    <columns>Fire_Feefo_today__c</columns>
    <columns>survey_sent__c</columns>
    <columns>purchaser_full_name__c</columns>
    <columns>return_date__c</columns>
    <columns>order_number__c</columns>
    <columns>email_purchaser__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Order Comms</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>