force-app/main/default/objects/Order_Communication__c/listViews/welcome_home_fired.listView-meta.xml
<ListView>
    <fullName>welcome_home_fired</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>email_purchaser__c</columns>
    <columns>order__c</columns>
    <columns>Welcome_home_sent__c</columns>
    <columns>order_number__c</columns>
    <columns>survey_sent__c</columns>
    <columns>Welcome_home_date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>communication_code__c</field>
        <operation>equals</operation>
        <value>Welcome Home</value>
    </filters>
    <label>welcome home fired</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>